--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,7 @@ jobs:
           --health-retries=5
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -39,7 +38,7 @@ jobs:
           pip install -r requirements.txt
           pip install psycopg2-binary alembic
 
-      - name: Wait for PostgreSQL to be ready
+      - name: Wait for PostgreSQL
         run: |
           until pg_isready -h localhost -p 5432 -U ci_user; do
             echo "Waiting for postgres..."
@@ -49,24 +48,12 @@ jobs:
       - name: Run Alembic migrations
         env:
           DATABASE_URL: postgresql+psycopg2://ci_user:ci_pass@localhost:5432/ci_db
-        run: |
-          alembic upgrade head
+        run: alembic upgrade head
 
-      - name: Verify migrations (example query)
+      - name: Print final database schema
         env:
           DATABASE_URL: postgresql+psycopg2://ci_user:ci_pass@localhost:5432/ci_db
         run: |
-          python - <<EOF
-          import os
-          from sqlalchemy import create_engine, text
-
-          engine = create_engine(os.getenv("DATABASE_URL"))
-
-          # 检查 users 表是否存在
-          with engine.connect() as conn:
-              result = conn.execute(text("SELECT to_regclass('public.users');"))
-              table_name = result.scalar()
-              if table_name != 'users':
-                  raise Exception("users table not created!")
-              print("Migration verified successfully!")
-          EOF
+          echo "=== Database Schema ==="
+          # 使用 pg_dump 打印所有表结构和约束
+          PGPASSWORD=ci_pass pg_dump -U ci_user -h localhost -s ci_db
