--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ${{ env.CI_WORKFLOW_NAME }}
+name: ci
 
 on:
   push:
@@ -7,7 +7,6 @@ on:
     branches: [ main ]
 
 env:
-  CI_WORKFLOW_NAME: Alembic CI
   POSTGRES_USER: ${{ env.POSTGRES_USER }}
   POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
   POSTGRES_DB: ${{ env.POSTGRES_DB }}
