--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Wait for PostgreSQL
         run: |
-          until pg_isready -h localhost -p 5432 -U $POSTGRES_USER -d $POSTGRES_DB; do
+          until pg_isready -h localhost -p 5432 -U  ${{ vars.POSTGRES_USER }}  -d ${{ vars.POSTGRES_DB }}; do
             echo "Waiting for postgres..."
             sleep 2
           done
